cmake_minimum_required(VERSION 3.21)
project(215)

set(CMAKE_CXX_STANDARD 14)

add_executable(215 215.cpp)


add_executable(quicksort quicksort.cpp)
add_executable(quicksort2 quicksort2.cpp)
add_executable(priority_queue_215 priority_queue_215.cpp)
add_executable(heap215 heap215.cpp)
add_executable(heapsort heapsort.cpp)
