add_executable(determineWhetherTheCharacterIsUnique 判定字符是否唯一.cpp)
add_executable(Determine_whether_each  判定是否互为字符重排.cpp)
add_executable(urlization URL化.cpp)
add_executable( palindromeArrangement  回文排列.cpp)
add_executable(oneEdit 一次编辑.cpp)
add_executable(stringCompression 字符串压缩.cpp)
add_executable(rotationMatrix 旋转矩阵.cpp)
add_executable(zeroMatrix 零矩阵.cpp)
add_executable(stringRotation 字符串轮转.cpp)
add_executable(removeDuplicateNodes 移除重复节点.cpp)
add_executable(returnToPenultimate  返回倒数第k个节点.cpp)
add_executable(deleteIntermediateNode 删除中间节点.cpp)
add_executable(splitLinkedList 分割链表.cpp)